--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,218 @@
 <main>
     <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+    <div>home</div>
+
+
+    <div>home</div>
 </main>
